--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ set (HEADERS
   ${CMAKE_CURRENT_SOURCE_DIR}/src/solver.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/typedef.hpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/vtk.hpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/console_output.hpp
   )
 
 set (SOURCES
@@ -68,6 +69,7 @@ set (SOURCES
   ${CMAKE_CURRENT_SOURCE_DIR}/src/parameter.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/solver.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/vtk.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/console_output.cpp
   )
 
 if (DEBUG_VISU)
