--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,8 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GOOD_FLAGS}")
 
 # debug visu?
 option (DEBUG_VISU
-#  "Disable debugging visualization" OFF)
-  "Enable debugging visualization" ON)
+  "Disable debugging visualization" OFF)
+#  "Enable debugging visualization" ON)
 
 # find sdl 2
 INCLUDE(FindPkgConfig)
