--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ set (CMAKE_CXX_COMPILER "/usr/bin/g++")
 
 #set (GOOD_FLAGS "-Wall -Wextra -pedantic -std=c++11")
 set (GOOD_FLAGS "-flto -O3 -Wall -Wextra -pedantic -std=c++11")
+#set (GOOD_FLAGS "-pg -Wall -Wextra -pedantic -std=c++11")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GOOD_FLAGS}")
 
 # debug visu?
@@ -100,3 +101,5 @@ if (MPI_LINK_FLAGS)
   set_target_properties (numsim PROPERTIES
     LINK_FLAGS "${MPI_LINK_FLAGS}")
 endif()
+
+set(CMAKE_BUILD_TYPE Release) # -O3 flag
